syntax = "proto3";

package user.messages;

option go_package = "github.com/Yux77Yux/platform_backend/generated/user";

message Follow {
  int64 follower_id = 1;
  int64 followee_id = 2;
}