syntax = "proto3";

package user.messages;

option go_package = "github.com/Yux77Yux/platform_backend/generated/user";

import "google/protobuf/timestamp.proto";

import "user/messages/user_role.proto";
import "common/user_default.proto";
import "common/custom_options.proto";

message User {
  enum UserGender {
    UNDEFINED = 0;
    MALE = 1;
    FEMALE = 2;
  }

  enum UserStatus {
    HIDING = 0;
    INACTIVE = 1;
    ACTIVE = 2;
    LIMITED = 3;
  }

  common.UserDefault user_default = 1;
  string user_avator = 2;
  string user_bio = 3 [(common.max_user_bio_length) = 1000];
  UserStatus user_status = 4;
  UserGender user_gender = 5;
  string user_email = 6;

  google.protobuf.Timestamp user_bday = 7;
  google.protobuf.Timestamp user_created_at = 8;
  google.protobuf.Timestamp user_updated_at = 9;
  user.messages.UserRole user_role = 10;
}