syntax = "proto3";

package user.messages;

option go_package = "github.com/Yux77Yux/platform_backend/generated/user";

message UserUpdateAvatar {
  int64 user_id = 1;
  string user_avatar = 2;
}